general hyperparameter tuning

--- a/models/gaussian/prototype_revised.ipynb
+++ b/models/gaussian/prototype_revised.ipynb
@@ -1800,7 +1800,7 @@
     "    error = error_gp(mu_s, cov_s, X_pred, X_train=X_train, Y_train=Y_train, samples=samples)\n",
     "    return error\n",
     "        \n",
-    "def get_params(end, death_metric=\"deaths\"):\n",
+    "def get_params(end, county, death_metric=\"deaths\"):\n",
     "    counties_dates = []\n",
     "    counties_death_errors = []\n",
     "    counties_fips = []\n",
@@ -1809,7 +1809,7 @@
     "    us = loader.load_data(\"/models/gaussian/us_training_data.csv\")\n",
     "    policies = loader.load_data(\"/data/us/other/policies.csv\")\n",
     "    fips_key = loader.load_data(\"/data/us/processing_data/fips_key.csv\", encoding=\"latin-1\")\n",
-    "    fips_list = [36061] #56013,1017\n",
+    "    fips_list = [county] #all thats replaced is switching the new york county code to county #56013,1017\n",
     "    total = len(fips_list)\n",
     "\n",
     "    for index, county in enumerate(fips_list):\n",
@@ -1908,8 +1908,9 @@
     "    X_pred = np.arange(0, len(county_data)+extrapolate).reshape(-1,1)\n",
     "    X_train = np.arange(0, len(county_data)).reshape(-1, 1)\n",
     "    Y_train = county_data[death_metric].values\n",
+    "    params_tuple = get_params(end, county, death_metric)\n",
     "\n",
-    "    predictions, cov = fit(X_train, Y_train, X_pred, noise, params=[4.90509259, 0.63635941, 0.09930556])\n",
+    "    predictions, cov = fit(X_train, Y_train, X_pred, noise, params=params_tuple)\n",
     "    std_error = np.sqrt(np.diag(cov))\n",
     "\n",
     "    death_cdf = []\n",
